fix(step_bar): fix stepbar display on mobile

--- a/scss/_o-step_bar.scss
+++ b/scss/_o-step_bar.scss
@@ -70,6 +70,8 @@ $arrow-orange: "f16e00";
     @include stepbar-arrow($arrow-gray);
     position: relative;
     float: left;
+    font-size: $font-size-base;
+    line-height: $line-height-base;
     padding: $padding-base-vertical $padding-base-horizontal;
     padding-left: 2rem;
     font-weight: bold;
@@ -175,7 +177,7 @@ $arrow-orange: "f16e00";
     .stepbar-item.done::after,
     .stepbar-item.current::after,
     .stepbar-item.next::after {
-      right: -.75rem;
+      right: -($o-stepbar-mobile-arrow-width - 0.0625); // remove 1px for mobile display error
       width: $o-stepbar-mobile-arrow-width;
       height: $o-stepbar-mobile-arrow-height;
       background-size: cover;
